# ComfyUI_Zwng_Nodes

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  zwng_nodes.py
.github/workflows/: publish.yml
LoadImagePathNode/: nodes.py
PreviewImageAndMaskNode/: nodes.py
SimpleGoogleTranslaterNode/: README.md  nodes.py
SimplePhotoshopConnectorNode/: nodes.py
web/: translate_node.js
